# ma

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: artifacts.yml
migrations/: 0_archive.sql  0_data.sql  0_state.sql
src/: archive.rs  cfg.rs  data.rs  file.rs  fs.rs  hash.rs  imap.rs  lib.rs  main.rs  state.rs  tracing.rs
src/cmd/: analyze.rs  dump.rs  export.rs  fetch.rs  import.rs  insert.rs  mod.rs
src/cmd/analyze/: mod.rs  routes.rs  senders.rs
