[package]
name = "ma"
version = "0.6.7"
description = "Mail Archivist"
repository = "https://github.com/xandkar/ma"
keywords = ["mail", "email", "archive", "database"]
categories = ["email", "command-line-utilities"]
license-file = "LICENSE"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
async-imap = { version = "0.9.7", default-features = false, features = ["runtime-tokio"] }
clap = { version = "4.5.10", features = ["derive"] }
flate2 = "1.0.30"
futures = "0.3.30"
indicatif = "0.17.8"
mail-parser = "0.9.3"
mailparse = "0.15.0"
rustls = "0.22.2"
rustls-pki-types = "1.1.0"
serde = { version = "1.0.204", features = ["derive"] }
sha2 = "0.10.8"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0.63"
tokio = { version = "1.39.1", features = ["full", "tracing"] }
tokio-rustls = "0.25.0"
toml = "0.8.16"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
webpki-roots = "0.26.0"

[dev-dependencies]
tempfile = "3.10.1"
